--- a/blog/2026-01-15-welcome.mdx
+++ b/blog/2026-01-15-welcome.mdx
@@ -1,7 +1,7 @@
 ---
 slug: frontend
 title: Frontend Development Starter Guide 🚀
-authors: []
+authors: [johnson]
 tags: [frontend, html, css, javascript]
 ---
 
