--- a/blog/2026-01-15-welcome.mdx
+++ b/blog/2026-01-15-welcome.mdx
@@ -6,7 +6,7 @@ tags: [frontend, html, css, javascript]
 ---
 
 
-Welcome to makeadifference blog!!!! If you're curious about becoming a **Frontend Developer** (and eventually a Full‑Stack Developer), this starter blog is designed just for you. Think of this as a **mini‑course in blog form**—covering the *what*, *why*, and *how*, with **simple hands‑on exercises** you can practice right away.
+Welcome to makeadifference blog 👋🏽 If you're curious about becoming a **Frontend Developer** (and eventually a Full‑Stack Developer), this starter blog is designed just for you. Think of this as a **mini‑course in blog form**—covering the *what*, *why*, and *how*, with **simple hands‑on exercises** you can practice right away.
 
 No prior experience required—just curiosity and consistency.
 
